修改快捷键 kt类型转为ts类型 排版

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     ],
     "keybindings": [
       {
-        "command": "extension.sayHello",
-        "key": "ctrl+alt+v",
-        "mac": "cmd+alt+v",
+        "command": "extension.kotlinModelToTypescript",
+        "key": "ctrl+k ctrl+v",
+        "mac": "ctrl+k ctrl+v",
         "when": "editorTextFocus"
       }
     ]
