--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "kotlin-model-to-typescript",
   "displayName": "kotlin model to typescript",
-  "description": "",
+  "description": "convert kotlin to typescript",
   "repository": {
     "type": "git",
     "url": "https://github.com/ismezy/vscode-plugin-kotlin-model-to-ts"
   },
-  "version": "0.0.2",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.30.0"
   },
